Add social links and logo to header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,38 @@
     <title>Physical Therapy Homepage</title>
 </head>
 <body>
+    <div id="social-container">
+        <ul id="social">
+            <li>
+                <a href="tel: 0872539883"><i class="fa-solid fa-phone"></i></a>
+            </li>
+            <li>
+                <a href="mailto: chattomeh@hotmail.com"><i class="fa-solid fa-envelope"></i></a>  
+            </li>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/home" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul> 
+    </div>
+    <header>
+        <div id="header-container">
+            <div class="logo-image">
+                <a href="index.html"></a>
+            </div>
 
-    <h1>Header</h1>
+        </div>
+    </header>
 
     <footer>Footer</footer>
+    <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
 </body>
 </html>
