--- a/index.html
+++ b/index.html
@@ -33,8 +33,32 @@
     </div>
     <header>
         <div id="header-container">
-            <div class="logo-image">
+            <nav>
+                <div id="menu-left">
+                    <ul class="left-menu">
+                        <li>
+                            <a href="index.html" class="active">Home</a>
+                        </li>
+                        <li>
+                            <a href="services.html">Services</a>
+                        </li>
+                        </ul>
+                </div>        
+                <div id="menu-right">
+                    <ul class="right-menu">
+                        <li>
+                            <a href="fees.html">Fees</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                        </ul>
+                </div>
+            </nav>
+            <div id="logo-container">
+                <div class="logo-image">
                 <a href="index.html"></a>
+                </div>
             </div>
 
         </div>
