--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <div id="menu-left">
                     <ul class="left-menu">
                         <li>
-                            <a href="index.html" class="active">Home</a>
+                            <a href="services.html">Services</a>
                         </li>
                         <li>
-                            <a href="services.html">Services</a>
+                            <a href="index.html" class="active">Home</a>
                         </li>
                         </ul>
                 </div>        
@@ -64,7 +64,7 @@
         </div>
     </header>
 
-    <footer>Footer</footer>
+    <footer></footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
 </body>
 </html>
