--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
         </div>
     </header>
+    <section id="home-hero-outer">
+        <div id="hero-image"></div>
 
     <footer></footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
