Add about us section and h1

--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@
                 <a href="index.html"></a>
                 </div>
             </div>
-
         </div>
     </header>
     <section id="home-hero-outer">
         <div id="hero-image"></div>
+    </section>
+    <section id="about-us">
+        <h1>About Us</h1>
+        <div id="about-left-container"></div>
+        <div id="about-right-container"></div>
+    </section>
 
     <footer></footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
