--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
         <div id="about-right-container"></div>
     </section>
 
+        <div class="row1">
+            <div class="column">
+                <h2>Test text</h2>
+            </div>
+            <div class="column2">
+                <h2>Test text 2</h2>
+            </div>
+        </div>    
+
     <footer></footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
 </body>
