Add About us content, image and styling

--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
     </section>
     <section id="about-us">
         <h1>About Us</h1>
-        <div id="about-left-container"></div>
-        <div id="about-right-container"></div>
+        <div id="about-left-container">
+            <p>We are the leading Physical Therapy Practice in Dublin for over 15 years. Our team would be happy to arrange a consultation and discuss any physical issues you might be having, our team is very thorough! We will then discuss a treatment plan that caters for each individual specifically. We offer 30 min and 60 min physical treatment slots to help alleviate any pain you’re having as well as creating a work out plan for you to do at home to assist in a quick recovery time.
+            </p>
+            <a class="about-button" type="button" href="#">Contact Us</a>
+        </div>
+        <div id="about-right-container">
+            <img class="about-us-1" src="assets/images/About Us 1 NEW.jpg" alt="Woman receiving consultation from therapist">
+        </div>
     </section>
 
         <div class="row1">
