Add remaining about us image and content section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <section id="about-us">
         <h1>About Us</h1>
         <div id="about-left-container">
+            <h2>How can we help?</h2>
             <p>We are the leading Physical Therapy Practice in Dublin for over 15 years. Our team would be happy to arrange a consultation and discuss any physical issues you might be having, our team is very thorough! We will then discuss a treatment plan that caters for each individual specifically. We offer 30 min and 60 min physical treatment slots to help alleviate any pain you’re having as well as creating a work out plan for you to do at home to assist in a quick recovery time.
             </p>
             <div class="about-button-container">
@@ -77,17 +78,19 @@
         <div id="about-right-container">
             <img class="about-us-1" src="assets/images/About Us 1 NEW.jpg" alt="Woman receiving consultation from therapist">
         </div>
+        <div id="about-right-container">
+            <h2>What do we treat?</h2>
+            <p>This depends on your consultation with one of our professional therapists. Whether it's ankle problems or neck problems, we cover a wide variety of issues you might be experiencing. We first focus on decreasing the pain using manual therapy techniques such as massage or even dry needling. Once some of your symptoms have been allievated we can then work together on restoring full motion movement or resolving the issue completely. Wondering if we can treat your exact problem? Check our our Treatments page for more information.
+            </p>
+            <div class="about-button-container">
+            <a class="about-button" type="button" href="#">Treatment List</a>
+            </div>
+        </div>
+        <div id="about-left-container">
+            <img class="about-us-1" src="assets/images/What do we treat NEW.jpeg" alt="Woman receiving treatment from therapist">
+        </div>
     </section>
-
-        <div class="row1">
-            <div class="column">
-                <h2>Test text</h2>
-            </div>
-            <div class="column2">
-                <h2>Test text 2</h2>
-            </div>
-        </div>    
-
+ 
     <footer></footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
 </body>
