--- a/index.html
+++ b/index.html
@@ -91,7 +91,26 @@
         </div>
     </section>
  
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <ul class="social-footer">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/home" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                </li>
+            </ul>
+            <p>© 2022 Gary Sutcliffe</p>
+            <p>T: +353 (0) 87 2539883 | E: chattomeh@hotmail.com</p>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/0b9b5a737a.js" crossorigin="anonymous"></script>    
 </body>
 </html>
